--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
@@ -1,6 +1,7 @@
 h3.text-center.text-thin 目标达成
 .col-xs-12
     ul.list-unstyled.workitem
+        li.finished.text-success 指定租户下的用户实现增删改查(2016.4.5)
         li.finished.text-success 按照不同租户进行用户查询(2016.4.2)
         li.finished.text-success 树选择不同节点刷新不同state(2016.4.2)
         li.finished.text-success 树控件载入后自动check(2016.4.2)
