--- a/src/anyang-1.0/jade/views/manage-center/tenant-account-manage-list.jade
+++ b/src/anyang-1.0/jade/views/manage-center/tenant-account-manage-list.jade
@@ -35,7 +35,7 @@
                         td {{::row.type|formatter:'type':vm.columns}}
                         td
                             .btn-group
-                                a.btn.btn-primary.btn-xs(title="{{'button.USER'|translate}}",ng-click="$state.go(vm.subsystemRoute('tenant-user-manage','list'),{tenantId:row._id})")
+                                a.btn.btn-primary.btn-xs(title="{{'button.USER'|translate}}",ng-click="$state.go(vm.transTo.user,{tenantId:row._id})")
                                     i.glyphicon.glyphicon-user
                             .btn-group
                                 a.btn.btn-primary.btn-xs(title="{{'button.EDIT'|translate}}",ng-click="vm.edit(row._id)")
