--- a/src/anyang-1.0/jade/views/manage-center/tenant-user-manage-details.jade
+++ b/src/anyang-1.0/jade/views/manage-center/tenant-user-manage-details.jade
@@ -10,44 +10,42 @@ form.form-validate.mb-lg(role='form', name="theForm", novalidate='', ng-submit="
                         i.glyphicon.glyphicon-minus-sign
                 div#contentTab1
                     fieldset: .form-group
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB1-LABEL-CODE') | translate}}:
+                        .col-md-10
+                            input.form-control(type='text', name='code',ng-model='vm.model.code',placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-CODE")|translate}}' ,required='')
+                            span.text-danger(ng-show="utils.vinput(this.theForm,'code','required')") {{ "validator.REQUIRED" | translate}}
+                    fieldset: .form-group
                         label.col-md-2.control-label {{ vm.viewTranslatePath('TAB1-LABEL-NAME') | translate}}:
                         .col-md-10
                             input.form-control(type='text', name='name',ng-model='vm.model.name',placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-NAME")|translate}}' ,required='')
                             span.text-danger(ng-show="utils.vinput(this.theForm,'name','required')") {{ "validator.REQUIRED" | translate}}
-                    fieldset: .form-group
-                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB1-LABEL-TYPE') | translate}}:
+                    fieldset(ng-if="vm.selectBinding.tenants"): .form-group
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB1-LABEL-TENANT_ID') | translate}}:
                         .col-md-10
                             //input.form-control(type='text', name='name',ng-model='vm.model.name',placeholder='{{vm.viewviewTranslatePath("TAB1-PLACEHOLDER-NAME")|translate}}' ,required='')
-                            ui-select(name="type",ng-model='vm.model.type', theme='bootstrap',required='')
-                                ui-select-match(placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-TYPE")|translate}}') {{$select.selected.name}}
-                                ui-select-choices(repeat='type.value as type in tenantTypes | filter: {name: $select.search}')
-                                    div(ng-bind-html='type.name | highlight: $select.search')
-                            span.text-danger(ng-show="utils.vinput(this.theForm,'type','required')") {{ "validator.REQUIRED" | translate}}
-
+                            ui-select(name="tenantId",ng-model='vm.model.tenantId', theme='bootstrap',required='')
+                                ui-select-match(placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-TENANT_ID")|translate}}') {{$select.selected.name}}
+                                ui-select-choices(repeat='tenant._id as tenant in vm.selectBinding.tenants | filter: {name: $select.search}')
+                                    div(ng-bind-html='tenant.name | highlight: $select.search')
+                            span.text-danger(ng-show="utils.vinput(this.theForm,'tenantId','required')") {{ "validator.REQUIRED" | translate}}
+                    fieldset: .form-group
+                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB1-LABEL-ROLE') | translate}}:
+                        .col-md-10
+                            //input.form-control(type='text', name='name',ng-model='vm.model.name',placeholder='{{vm.viewviewTranslatePath("TAB1-PLACEHOLDER-NAME")|translate}}' ,required='')
+                            ui-select(name="roles",multiple,require-multiple,ng-model='vm.model.roles', theme='bootstrap')
+                                ui-select-match(placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-ROLE")|translate}}') {{$item.name}}
+                                ui-select-choices(repeat='role.value as role in vm.selectBinding.roles | filter: {name: $select.search}')
+                                    div(ng-bind-html='role.name | highlight: $select.search')
+                            //span.text-danger(ng-show="this.theForm.role.$error") {{ "validator.REQUIRED" | translate}}
+                            span.text-danger(ng-show="utils.vinput(this.theForm,'roles','required')") {{ "validator.REQUIRED" | translate}}
                     fieldset: .form-group
                         label.col-md-2.control-label {{ vm.viewTranslatePath('TAB1-LABEL-FLAG-COLLECTION') | translate}}:
                         .col-md-2
                             .checkbox.c-checkbox
                                 label
-                                    input#activeFlag(type='checkbox',ng-model='vm.model.active_flag')
+                                    input#stopFlag(type='checkbox',ng-model='vm.model.stop_flag')
                                     span.fa.fa-check
-                            label(for="activeFlag") {{ vm.viewTranslatePath('TAB1-LABEL-ACTIVE_FLAG') | translate}}
-                        .col-md-2
-                            .checkbox.c-checkbox
-                                label
-                                    input#certificateFlag(type='checkbox',ng-model='vm.model.certificate_flag')
-                                    span.fa.fa-check
-                            label(for="certificateFlag") {{ vm.viewTranslatePath('TAB1-LABEL-CERTIFICATE_FLAG') | translate}}
-                    fieldset: .form-group
-                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB1-LABEL-TERMSOFVALIDITY_LATEST') | translate}}:
-                        .col-md-2
-                            .input-group
-                                input.form-control(type="text",name='termsofvalidity_latest',is-open="vm.openedDP",datepicker-popup="",ng-model="vm.model.terms_validity.latest" ,placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-TERMSOFVALIDITY_LATEST")|translate}}',required='',ng-click="vm.openDP($event)")
-                                span.input-group-btn
-                                    button.btn.btn-primary(ng-click="vm.openDP($event)")
-                                        i.glyphicon.glyphicon-calendar
-                            span.text-danger(ng-show="utils.vinput(this.theForm,'termsofvalidity_latest','required')") {{ "validator.REQUIRED" | translate}}
-                            span.text-danger(ng-show="utils.vinput(this.theForm,'termsofvalidity_latest','date')") {{ "validator.DATE" | translate}}
+                            label(for="stopFlag") {{ vm.viewTranslatePath('TAB1-LABEL-STOP_FLAG') | translate}}
                     fieldset: .form-group
                         label.col-md-2.control-label {{ vm.viewTranslatePath('TAB1-LABEL-PHONE') | translate}}:
                         .col-md-10
@@ -55,20 +53,13 @@ form.form-validate.mb-lg(role='form', name="theForm", novalidate='', ng-submit="
                             span.text-danger(ng-show="utils.vinput(this.theForm,'phone','required')") {{ "validator.REQUIRED" | translate}}
                             span.text-danger(ng-show="utils.vinput(this.theForm,'phone','phone')") {{ "validator.FORMAT" | translate:{item:"手机号码"} }}
                             span.text-danger(ng-show="utils.vinput(this.theForm,'phone','alreadyExists')") {{ "validator.ALREADY-EXISTS" | translate:{item:"手机号码"} }}
-                    fieldset: .form-group
-                        label.col-md-2.control-label {{ vm.viewTranslatePath('TAB1-LABEL-EMAIL') | translate}}:
-                        .col-md-10
-                            input.form-control(type='email',name='email' , ng-model='vm.model.email',placeholder='{{vm.viewTranslatePath("TAB1-PLACEHOLDER-EMAIL")|translate}}' ,required='',ng-model-options="{debounce:500}",ui-validate-async="{alreadyExists: 'vm.notExist({email:$value})'}")
-                            span.text-danger(ng-show="utils.vinput(this.theForm,'email','required')") {{ "validator.REQUIRED" | translate}}
-                            span.text-danger(ng-show="utils.vinput(this.theForm,'email','email')") {{ "validator.EMAIL" | translate:{item:"邮箱地址"} }}
-                            span.text-danger(ng-show="utils.vinput(this.theForm,'email','alreadyExists')") {{ "validator.ALREADY-EXISTS" | translate:{item:"邮箱地址"} }}
-            tab(active="vm.tab2.active")
-                tab-heading
-                    | {{ vm.viewTranslatePath('TAB2') | translate}}
-                    span.text-danger(title="{{'validator.FIELD-INVALID'|translate}}" , ng-show="utils.vtab('contentTab2')")
-                        i.glyphicon.glyphicon-minus-sign
-                div#contentTab2
-                    | tab2
+            //tab(active="vm.tab2.active")
+            //    tab-heading
+            //        | {{ vm.viewTranslatePath('TAB2') | translate}}
+            //        span.text-danger(title="{{'validator.FIELD-INVALID'|translate}}" , ng-show="utils.vtab('contentTab2')")
+            //            i.glyphicon.glyphicon-minus-sign
+            //    div#contentTab2
+            //        | tab2
     .text-right.mt-lg
         button.btn.btn-warning(type="button",ng-click="vm.cancel()") {{'button.CANCEL'|translate}}
         button.btn.btn-success(type="submit") {{'button.SAVE'|translate}}
