--- a/src/anyang-1.0/jade/views/partials/sidebar.jade
+++ b/src/anyang-1.0/jade/views/partials/sidebar.jade
@@ -1,7 +1,7 @@
 // Inline template with sidebar items markup and ng-directives
 script(type='text/ng-template', id="sidebar-renderer.html")
   span(ng-if="item.heading") {{(item.translate | translate) || item.text}}
-  a(ng-if="!item.heading", ng-href="{{$state.href(item.sref, item.params)}}", title="{{item.text}}")
+  a(ng-if="!item.heading", ng-href='{{$state.href(item.sref, item.params)}}', title="{{item.text}}")
     .pull-right(ng-if="item.alert", ng-class="item.label || 'label label-success'") {{item.alert}}
     em(class="{{item.icon}}", ng-if="item.icon")
     span {{(item.translate | translate) || item.text}}
