--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
@@ -1,6 +1,20 @@
 h3.text-center.text-thin 目标达成
 .col-xs-12
     ul.list-unstyled.workitem
+        li.finished.text-success 管理中心重设用户密码(2016.4.15)
+        li.finished.text-success 用户修改密码(2016.4.15)
+        li.finished.text-success 菜单权限判断open_funcs中某个func.payed和expired_on(2016.4.14)
+        li.finished.text-success 登录判断validate_util(2016.4.14)
+        li.finished.text-success 订单详情中显示订单状态并增加订单查看视图(2016.4.14)
+        li.finished.text-success 交易成功后的发起退款并由财务退款确认(2016.4.14)
+        li.finished.text-success 增加下单时间和开通时间(2016.4.13)
+        li.finished.text-success 完成订单订单状态改为交易成功,更新tenant.open_funcs.payed和expired_on(2016.4.13)
+        li.finished.text-success 财务收款确认(2016.4.13)
+        li.finished.text-success 租户订单载入自动选中(2016.4.12)
+        li.finished.text-success 租户订单载入提交(2016.4.12)
+        li.finished.text-success 租户订单增加删除(2016.4.11-12)
+        li.finished.text-success 租户设置模块(2016.4.8)
+        li.finished.text-success 模块价格定义(2016.4.7)
         li.finished.text-success 指定租户下的用户实现增删改查(2016.4.5)
         li.finished.text-success 按照不同租户进行用户查询(2016.4.2)
         li.finished.text-success 树选择不同节点刷新不同state(2016.4.2)
