--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab1.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab1.jade
@@ -1,7 +1,7 @@
 h3.text-center.text-thin 目标
 .col-xs-12
     ul.list-unstyled.workitem
-        li.text-info 模块价格定义
+        li.text-info 规划中...
 
 
 
