--- a/src/anyang-1.0/less/app/form-elements.less
+++ b/src/anyang-1.0/less/app/form-elements.less
@@ -182,6 +182,27 @@
 }
 
 //
+// Form Readable
+//
+.form-readable {
+  display: block;
+  width: 100%;
+  //height: @input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
+  padding: @padding-base-vertical @padding-base-horizontal;
+  font-size: @font-size-base;
+  line-height: @line-height-base;
+  color: @input-color;
+  background-color: @input-bg-disabled;
+  cursor: @cursor-disabled;
+  background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+  border: 1px solid @input-border;
+  border-radius: @input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
+  .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+  .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
+  height: auto;
+}
+
+//
 // Form Rounded
 //
 
