--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
@@ -1,6 +1,7 @@
 h3.text-center.text-thin 目标达成
 .col-xs-12
     ul.list-unstyled.workitem
+        li.finished.text-success 重构订单系统，修复多个订单带来的开通和退款问题(2016.4.18)
         li.finished.text-success 管理中心重设用户密码(2016.4.15)
         li.finished.text-success 用户修改密码(2016.4.15)
         li.finished.text-success 菜单权限判断open_funcs中某个func.payed和expired_on(2016.4.14)
