--- a/src/anyang-1.0/less/app/tree.less
+++ b/src/anyang-1.0/less/app/tree.less
@@ -25,6 +25,9 @@
       //> span {
       //  text-indent: 0px;
       //}
+      .tree-data-part {
+        margin:0 5px;
+      }
     }
     > div.tree-node.tree-node-selected,
     > div.tree-node.tree-node-selected:hover{
