--- a/src/anyang-1.0/jade/views/app-template.jade
+++ b/src/anyang-1.0/jade/views/app-template.jade
@@ -27,7 +27,7 @@ script(type='text/ng-template', id="tree-basic-renderer.html")
                 span.fa.fa-check(ng-class="{'undetermined':vm.trees[tIndex].isUndetermined(nIndex)}")
         i(class="{{node.icon}}", ng-if="node.icon")
         span {{node.name}}
-        span(ng-if="node.data") {{node.data}}
+        span(ng-if="node.template" ng-include="node.template")
     ul(ng-if="node.children",ng-show="vm.trees[tIndex].isExpanded(nIndex)")
         li(ng-repeat='node in node.children',ng-include="'tree-basic-renderer.html'",ng-init="nIndex = (nIndex+vm.trees[tIndex].levelSplitChar+$index)")
 script(type="text/ng-template", id="changePasswordByUser.html")
