160503a tree add layout='nav|tile'

--- a/src/anyang-1.0/jade/views/app-template.jade
+++ b/src/anyang-1.0/jade/views/app-template.jade
@@ -17,6 +17,23 @@ script(type="text/ng-template", id="normalConfirmDialog.html")
     .text-center
         button.btn.btn-warning.mr(type='button', ng-click='confirm("ok")') {{'button.CONFIRM'|translate}}
         button.btn.btn-default(type='button', ng-click="closeThisDialog('cancel')") {{'button.CANCEL'|translate}}
+script(type='text/ng-template', id="tree-directive-default-renderer.html")
+    .ul-container
+        ul
+            li(ng-repeat='node in $tree.treeData',ng-include="'tree-directive-default-node-renderer.html'",ng-init="nIndex = $index;")
+script(type='text/ng-template', id="tree-directive-default-node-renderer.html")
+    .tree-node.no-select(s-tree-node)
+        i(ng-if="node.children",class="fa",ng-class="{'fa-caret-right':!$tree.isExpanded(nIndex),'fa-caret-down':$tree.isExpanded(nIndex)}",ng-click="$tree.toggle(nIndex,$event)")
+        i(ng-if="!node.children",class="fa",ng-class="{'fa-caret-right':$tree.mode=='grid'}")
+        .checkbox.c-checkbox(ng-if="$tree.mode=='check'")
+            label
+                input(type='checkbox',ng-click="$tree.toggleCheck(node,$event)",ng-model="$tree.inputCheckedIndex[nIndex]")
+                span.fa.fa-check(ng-class="{'undetermined':$tree.isUndetermined(nIndex)}")
+        i(class="{{node.icon}}", ng-if="node.icon")
+        span {{node.name}}
+        span(ng-if="node.template" ng-include="node.template")
+    ul(ng-if="node.children",ng-show="$tree.isExpanded(nIndex)")
+        li(ng-repeat='node in node.children',ng-include="'tree-directive-default-node-renderer.html'",ng-init="nIndex = (nIndex+$tree.levelSplitChar+$index)")
 script(type='text/ng-template', id="tree-basic-renderer.html")
     .tree-node.no-select(tree-index="{{tIndex}}",node-index="{{nIndex}}",node-id="{{node._id}}",support-pre-select-or-check,ng-click="vm.trees[tIndex].select(node,$event)",ng-dblclick="vm.trees[tIndex].toggle(nIndex,$event)",ng-init="vm.trees[tIndex].addIndex(nIndex)")
         i(ng-if="node.children",class="fa",ng-class="{'fa-caret-right':!vm.trees[tIndex].isExpanded(nIndex),'fa-caret-down':vm.trees[tIndex].isExpanded(nIndex)}",ng-click="vm.trees[tIndex].toggle(nIndex,$event)")
