--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
@@ -1,6 +1,18 @@
 h3.text-center.text-thin 目标达成
 .col-xs-12
     ul.list-unstyled.workitem
+        li.finished.text-success 树增加平铺布局(2016.5.3-2016.5.3)
+        li.finished.text-success 树增加导航布局(2016.4.28-2016.4.29)
+        li.finished.text-success 树重构并支持标签构建(2016.4.25-2016.4.27)
+        li.finished.text-success box-input类似支付密码输入框directive(2016.4.23)
+        li.finished.text-success 了解mongoose的middleware几个重要方法(2016.4.22)
+        li.finished.text-success 重构-Node端增加debug-services，内放调试用服务(2016.4.21)
+        li.finished.text-success 重构-应用路由拆为按多个子系统分离的代码文件(2016.4.20)
+        li.finished.text-success 租户-系统管理-用户管理(2016.4.20)
+        li.finished.text-success 重构-树获取方式改为tmg,tmp(2016.4.19)
+        li.finished.text-success 租户-系统管理-房间增删改查(2016.4.19)
+        li.finished.text-success 租户-系统管理-片区增删改查(2016.4.19)
+        li.finished.text-success 增加diable基本动作即将status=0(2016.4.19)
         li.finished.text-success 重构订单系统，修复多个订单带来的开通和退款问题(2016.4.18)
         li.finished.text-success 管理中心重设用户密码(2016.4.15)
         li.finished.text-success 用户修改密码(2016.4.15)
