--- a/src/anyang-1.0/less/app.less
+++ b/src/anyang-1.0/less/app.less
@@ -44,6 +44,7 @@
 @import "app/user-block";
 @import "app/grid";
 @import "app/tree";
+@import "app/box-input";
 @import "app/workitem";
 
 // Form elements
