--- a/src/anyang-1.0/jade/views/demo-center/tree-basic.jade
+++ b/src/anyang-1.0/jade/views/demo-center/tree-basic.jade
@@ -35,11 +35,12 @@ script(type='text/ng-template', id="tree-demo-baisc-renderer.html")
         li(ng-repeat='node in node.children',ng-include="'tree-demo-baisc-renderer.html'",ng-init="nIndex = (nIndex+vm.trees[tIndex].levelSplitChar+$index)")
 .col-xs-6
     .tree.tree-demo#tree1(ng-style="{height:vm.size.h-15}")
-        ul
-            li.repeat-modify(ng-repeat='node in vm.trees[0].treeData',ng-include="'tree-demo-baisc-renderer.html'",ng-init="tIndex=0;nIndex = $index")
+        .ul-container
+            ul
+                li(ng-repeat='node in vm.trees[0].treeData',ng-include="'tree-demo-baisc-renderer.html'",ng-init="tIndex=0;nIndex = $index")
     span selected:{{vm.trees[0].selectedNode.name}}
 .col-xs-6
     .tree.tree-demo#tree2(ng-style="{height:vm.size.h-15}")
         ul
-            li.repeat-modify(ng-repeat='node in vm.trees[1].treeData',ng-include="'tree-demo-baisc-renderer.html'",ng-init="tIndex=1;nIndex = $index")
+            li(ng-repeat='node in vm.trees[1].treeData',ng-include="'tree-demo-baisc-renderer.html'",ng-init="tIndex=1;nIndex = $index")
     span checked:{{vm.trees[1].checkedNodes}}
