--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab1.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab1.jade
@@ -2,6 +2,7 @@ h3.text-center.text-thin 目标
 .col-xs-12
     ul.list-unstyled.workitem
         li.text-info 老人入院记录增删改查、入院评估（收费项目勾选）
+        li.text-info 租户-系统管理-部门管理
         li.text-info 老人入院后增加到老人档案
         li.text-info 老人入院后增加到老人档案租户自定义部分
 
