--- a/src/anyang-1.0/less/app/bootstrap-reset.less
+++ b/src/anyang-1.0/less/app/bootstrap-reset.less
@@ -147,6 +147,12 @@ now {
   }
 }
 
+//修改选中,使更明显
+.btn.active, .btn:active {
+  background-color: orange;
+  border-color: orange;
+}
+
 // FORMS
 
 .form-control {
